--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .container {
     display: flex;
